AplicacionInformatica_Grupo09/gen/gramaticaParser.java
// Generated from C:/Users/danie/OneDrive - Universidad Rey Juan Carlos/Escritorio/AplicacionInformatica_Grupo09/src\gramatica.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, IDENTIFIER=42, NUMERIC_INTEGER_CONST=43, 
		NUMERIC_REAL_CONST=44, FIJO=45, EXPONENCIAL=46, MIXTO=47, STRING_CONST=48, 
		SIMPLE=49, DOBLE=50, COMENTARIO=51, CORCHETE=52, PARENTESIS_ASTERISCO=53, 
		WHITESPACE=54;
	public static final int
		RULE_axioma = 0, RULE_prg = 1, RULE_blq = 2, RULE_dcllist = 3, RULE_dcl = 4, 
		RULE_defcte = 5, RULE_ctelist = 6, RULE_ctelist1 = 7, RULE_simpvalue = 8, 
		RULE_defvar = 9, RULE_defvarlist = 10, RULE_defvarlist1 = 11, RULE_defproc = 12, 
		RULE_deffun = 13, RULE_formal_paramlist = 14, RULE_formal_param = 15, 
		RULE_varlist = 16, RULE_tbas = 17, RULE_sentlist = 18, RULE_sentlist1 = 19, 
		RULE_sent = 20, RULE_asig = 21, RULE_exp = 22, RULE_subpparamlist = 23, 
		RULE_explist = 24, RULE_proc_call = 25, RULE_factor = 26, RULE_op = 27, 
		RULE_inc = 28, RULE_expcond = 29, RULE_expcond1 = 30, RULE_oplog = 31, 
		RULE_factorcond = 32, RULE_opcomp = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"axioma", "prg", "blq", "dcllist", "dcl", "defcte", "ctelist", "ctelist1", 
			"simpvalue", "defvar", "defvarlist", "defvarlist1", "defproc", "deffun", 
			"formal_paramlist", "formal_param", "varlist", "tbas", "sentlist", "sentlist1", 
			"sent", "asig", "exp", "subpparamlist", "explist", "proc_call", "factor", 
			"op", "inc", "expcond", "expcond1", "oplog", "factorcond", "opcomp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAM'", "';'", "'.'", "'BEGIN'", "'END'", "'CONST'", "'='", 
			"'VAR'", "':'", "'PROCEDURE'", "'FUNCTION'", "'('", "')'", "','", "'integer'", 
			"'real'", "'IF'", "'THEN'", "'ELSE'", "'WHILE'", "'DO'", "'REPEAT'", 
			"'UNTIL'", "'FOR'", "':='", "'+'", "'-'", "'*'", "'DIV'", "'MOD'", "'TO'", 
			"'DOWNTO'", "'OR'", "'AND'", "'NOT'", "'TRUE'", "'FALSE'", "'<'", "'>'", 
			"'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "IDENTIFIER", "NUMERIC_INTEGER_CONST", 
			"NUMERIC_REAL_CONST", "FIJO", "EXPONENCIAL", "MIXTO", "STRING_CONST", 
			"SIMPLE", "DOBLE", "COMENTARIO", "CORCHETE", "PARENTESIS_ASTERISCO", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private Inicializar cabeceras;

	    private Inicializar func_proc;

	    private Inicializar prg_principal;

	    // Recibir como un parámetro del constructor el objeto real
	    public gramaticaParser ( TokenStream input, Inicializar theinfo )  {
	        this(input) ;
	        cabeceras = theinfo;
	        func_proc = theinfo;
	        prg_principal = theinfo;
	    }
	 
	public gramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AxiomaContext extends ParserRuleContext {
		public PrgContext prg() {
			return getRuleContext(PrgContext.class,0);
		}
		public AxiomaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axioma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterAxioma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitAxioma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitAxioma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AxiomaContext axioma() throws RecognitionException {
		AxiomaContext _localctx = new AxiomaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_axioma);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			prg();
			cabeceras.ImprimeOperacion(); func_proc.ImprimeSubprograma(); prg_principal.ImprimePrograma();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrgContext extends ParserRuleContext {
		public BlqContext blq;
		public TerminalNode IDENTIFIER() { return getToken(gramaticaParser.IDENTIFIER, 0); }
		public BlqContext blq() {
			return getRuleContext(BlqContext.class,0);
		}
		public PrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterPrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitPrg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitPrg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrgContext prg() throws RecognitionException {
		PrgContext _localctx = new PrgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__0);
			setState(72);
			match(IDENTIFIER);
			setState(73);
			match(T__1);
			setState(74);
			((PrgContext)_localctx).blq = blq();
			 prg_principal.setString(((PrgContext)_localctx).blq.s + ". </div>");
			setState(76);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlqContext extends ParserRuleContext {
		public String s;
		public DcllistContext dcllist;
		public SentlistContext sentlist;
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public BlqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterBlq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitBlq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitBlq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlqContext blq() throws RecognitionException {
		BlqContext _localctx = new BlqContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			((BlqContext)_localctx).dcllist = dcllist("");
			((BlqContext)_localctx).s =  ((BlqContext)_localctx).dcllist.s ;
			setState(80);
			match(T__3);
			prg_principal.incTab(); _localctx.s += "<div>" + cabeceras.getReservadas_init() + "BEGIN" + cabeceras.getReservadas_final() +"</div>";
			setState(82);
			((BlqContext)_localctx).sentlist = sentlist();
			_localctx.s += "<DIV style=\"text-indent:" + prg_principal.getContTab() +"cm\">"; _localctx.s += ((BlqContext)_localctx).sentlist.s; prg_principal.decTab();
			setState(84);
			match(T__4);
			_localctx.s += func_proc.getTabulacion_final(); _localctx.s += "<div>" + cabeceras.getReservadas_init() + "END" + cabeceras.getReservadas_final();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DcllistContext extends ParserRuleContext {
		public String h;
		public String s;
		public DclContext dcl;
		public DcllistContext dcllist;
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DcllistContext(ParserRuleContext parent, int invokingState, String h) {
			super(parent, invokingState);
			this.h = h;
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitDcllist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitDcllist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DcllistContext dcllist(String h) throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState(), h);
		enterRule(_localctx, 6, RULE_dcllist);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__7:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				((DcllistContext)_localctx).dcl = dcl();
				_localctx.h += ((DcllistContext)_localctx).dcl.s ;
				setState(89);
				((DcllistContext)_localctx).dcllist = dcllist(_localctx.h);
				((DcllistContext)_localctx).s =  ((DcllistContext)_localctx).dcllist.s ;
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				((DcllistContext)_localctx).s =  _localctx.h ;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public String s;
		public DefcteContext defcte;
		public DefvarContext defvar;
		public DefprocContext defproc;
		public DeffunContext deffun;
		public DefcteContext defcte() {
			return getRuleContext(DefcteContext.class,0);
		}
		public DefvarContext defvar() {
			return getRuleContext(DefvarContext.class,0);
		}
		public DefprocContext defproc() {
			return getRuleContext(DefprocContext.class,0);
		}
		public DeffunContext deffun() {
			return getRuleContext(DeffunContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dcl);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				((DclContext)_localctx).defcte = defcte();
				((DclContext)_localctx).s =  ((DclContext)_localctx).defcte.s;
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				((DclContext)_localctx).defvar = defvar();
				((DclContext)_localctx).s =  ((DclContext)_localctx).defvar.s;
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				((DclContext)_localctx).defproc = defproc();
				((DclContext)_localctx).s =  ((DclContext)_localctx).defproc.s;
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				((DclContext)_localctx).deffun = deffun();
				((DclContext)_localctx).s =  ((DclContext)_localctx).deffun.s ;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefcteContext extends ParserRuleContext {
		public String s;
		public CtelistContext ctelist;
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public DefcteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defcte; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterDefcte(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitDefcte(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitDefcte(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefcteContext defcte() throws RecognitionException {
		DefcteContext _localctx = new DefcteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defcte);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__5);
			((DefcteContext)_localctx).s =  "<div>" + cabeceras.getReservadas_init() + "CONST" + cabeceras.getReservadas_final() + "</div>";
			setState(111);
			((DefcteContext)_localctx).ctelist = ctelist();
			_localctx.s += "<DIV style=\"text-indent:1.25cm\">";_localctx.s += ((DefcteContext)_localctx).ctelist.s;_localctx.s += "</DIV>"; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CtelistContext extends ParserRuleContext {
		public String s;
		public Token IDENTIFIER;
		public SimpvalueContext simpvalue;
		public Ctelist1Context ctelist1;
		public TerminalNode IDENTIFIER() { return getToken(gramaticaParser.IDENTIFIER, 0); }
		public SimpvalueContext simpvalue() {
			return getRuleContext(SimpvalueContext.class,0);
		}
		public Ctelist1Context ctelist1() {
			return getRuleContext(Ctelist1Context.class,0);
		}
		public CtelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterCtelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitCtelist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitCtelist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CtelistContext ctelist() throws RecognitionException {
		CtelistContext _localctx = new CtelistContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ctelist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((CtelistContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			((CtelistContext)_localctx).s =  "<div>"+cabeceras.getIdentificadores_init() + (((CtelistContext)_localctx).IDENTIFIER!=null?((CtelistContext)_localctx).IDENTIFIER.getText():null) + cabeceras.getIdentificadores_final();
			setState(116);
			match(T__6);
			_localctx.s += '=';
			setState(118);
			((CtelistContext)_localctx).simpvalue = simpvalue();
			_localctx.s += ((CtelistContext)_localctx).simpvalue.s ;
			setState(120);
			match(T__1);
			_localctx.s += "; </div>";
			setState(122);
			((CtelistContext)_localctx).ctelist1 = ctelist1("");
			_localctx.s +=  ((CtelistContext)_localctx).ctelist1.s;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
